--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.0.0",
-    "appium-base-driver": "^5.1.0",
+    "appium-base-driver": "^5.2.1",
     "appium-idb": "^0",
     "appium-ios-device": "^1.2.3",
     "appium-ios-driver": "^4.0.0",
     "appium-ios-simulator": "^3.16.0",
-    "appium-remote-debugger": "^7.3.0",
-    "appium-support": "^2.37.0",
+    "appium-remote-debugger": "^7.5.1",
+    "appium-support": "^2.38.1",
     "appium-webdriveragent": "^2.3.2",
     "appium-xcode": "^3.8.0",
     "async-lock": "^1.0.0",
@@ -60,6 +60,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.24.0",
     "node-simctl": "^5.0.1",
+    "pluralize": "^8.0.0",
     "portscanner": "2.2.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
@@ -116,7 +117,7 @@
     "pngjs": "^3.3.1",
     "pre-commit": "^1.1.3",
     "sinon": "^8.0.0",
-    "wd": "^1.5.0"
+    "wd": "=1.11.4"
   },
   "greenkeeper": {
     "ignore": []
