--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
   include:
     - stage: tests
       name: Unit tests
-      if: &noncron type != cron
+      if: &noncron type = cron
       env:
         - TEST=unit
         - COVERALLS=1
@@ -63,7 +63,7 @@ jobs:
         - TEST=functional/web
 
     - stage: "[CRON] Upload Appium build to Sauce Storage"
-      if: &cron type = cron
+      if: &cron type != cron
       os: linux
       env: CLOUD=1
       script: npx gulp sauce-storage-upload
@@ -79,110 +79,110 @@ jobs:
       os: linux
       name: Basic, device 1
       env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=1 TEST=functional/basic
-    - stage:
-      if: *cron
-      os: linux
-      name: Basic, device 2
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=2 TEST=functional/basic
-    - stage:
-      if: *cron
-      os: linux
-      name: Basic, device 3
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=3 TEST=functional/basic
-    - stage:
-      if: *cron
-      os: linux
-      name: Basic, device 4
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=4 TEST=functional/basic
-
-    - stage:
-      if: *cron
-      os: linux
-      name: Web, device 0
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=0 TEST=functional/web
-      addons: &sc
-        sauce_connect:
-          no_ssl_bump_domains: localhost
-    - stage:
-      if: *cron
-      os: linux
-      name: Web, device 1
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=1 TEST=functional/web
-      addons:
-        *sc
-    - stage:
-      if: *cron
-      os: linux
-      name: Web, device 2
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=2 TEST=functional/web
-      addons:
-        *sc
-    - stage:
-      if: *cron
-      os: linux
-      name: Web, device 3
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=3 TEST=functional/web
-      addons:
-        *sc
-    - stage:
-      if: *cron
-      os: linux
-      name: Web, device 4
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=4 TEST=functional/web
-      addons:
-        *sc
-
-    - stage:
-      if: *cron
-      os: linux
-      name: Long, device 0
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=0 LONG=1 TEST=functional/long
-    - stage:
-      if: *cron
-      os: linux
-      name: Long, device 1
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=1 LONG=1 TEST=functional/long
-    - stage:
-      if: *cron
-      os: linux
-      name: Long, device 2
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=2 LONG=1 TEST=functional/long
-    - stage:
-      if: *cron
-      os: linux
-      name: Long, device 3
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=3 LONG=1 TEST=functional/long
-    - stage:
-      if: *cron
-      os: linux
-      name: Long, device 4
-      env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=4 LONG=1 TEST=functional/long
-
-
-    # - stage: "[CRON] Sauce RDC Tests"
-    #   if: type = cron
-    #   os: linux
-    #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=0 TEST=functional/basic
     # - stage:
-    #   if: type = cron
+    #   if: *cron
     #   os: linux
-    #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=1 TEST=functional/basic
+    #   name: Basic, device 2
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=2 TEST=functional/basic
     # - stage:
-    #   if: type = cron
+    #   if: *cron
     #   os: linux
-    #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=0 TEST=functional/web
+    #   name: Basic, device 3
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=3 TEST=functional/basic
     # - stage:
-    #   if: type = cron
+    #   if: *cron
     #   os: linux
-    #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=1 TEST=functional/web
+    #   name: Basic, device 4
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=4 TEST=functional/basic
+    #
     # - stage:
-    #   if: type = cron
+    #   if: *cron
     #   os: linux
-    #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=0 TEST=functional/long
+    #   name: Web, device 0
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=0 TEST=functional/web
+    #   addons: &sc
+    #     sauce_connect:
+    #       no_ssl_bump_domains: localhost
     # - stage:
-    #   if: type = cron
+    #   if: *cron
     #   os: linux
-    #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=1 TEST=functional/long
+    #   name: Web, device 1
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=1 TEST=functional/web
+    #   addons:
+    #     *sc
+    # - stage:
+    #   if: *cron
+    #   os: linux
+    #   name: Web, device 2
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=2 TEST=functional/web
+    #   addons:
+    #     *sc
+    # - stage:
+    #   if: *cron
+    #   os: linux
+    #   name: Web, device 3
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=3 TEST=functional/web
+    #   addons:
+    #     *sc
+    # - stage:
+    #   if: *cron
+    #   os: linux
+    #   name: Web, device 4
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=4 TEST=functional/web
+    #   addons:
+    #     *sc
+    #
+    # - stage:
+    #   if: *cron
+    #   os: linux
+    #   name: Long, device 0
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=0 LONG=1 TEST=functional/long
+    # - stage:
+    #   if: *cron
+    #   os: linux
+    #   name: Long, device 1
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=1 LONG=1 TEST=functional/long
+    # - stage:
+    #   if: *cron
+    #   os: linux
+    #   name: Long, device 2
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=2 LONG=1 TEST=functional/long
+    # - stage:
+    #   if: *cron
+    #   os: linux
+    #   name: Long, device 3
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=3 LONG=1 TEST=functional/long
+    # - stage:
+    #   if: *cron
+    #   os: linux
+    #   name: Long, device 4
+    #   env: CLOUD=1 SAUCE_EMUSIM_DEVICE_INDEX=4 LONG=1 TEST=functional/long
+    #
+    #
+    # # - stage: "[CRON] Sauce RDC Tests"
+    # #   if: type = cron
+    # #   os: linux
+    # #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=0 TEST=functional/basic
+    # # - stage:
+    # #   if: type = cron
+    # #   os: linux
+    # #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=1 TEST=functional/basic
+    # # - stage:
+    # #   if: type = cron
+    # #   os: linux
+    # #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=0 TEST=functional/web
+    # # - stage:
+    # #   if: type = cron
+    # #   os: linux
+    # #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=1 TEST=functional/web
+    # # - stage:
+    # #   if: type = cron
+    # #   os: linux
+    # #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=0 TEST=functional/long
+    # # - stage:
+    # #   if: type = cron
+    # #   os: linux
+    # #   env: CLOUD=1 SAUCE_RDC_DEVICE_INDEX=1 TEST=functional/long
 
 install:
   - npm --version
